style.css
/* ... */
#donuts h3 {
    color: #333e48;
    position: relative;
    margin-bottom: 4rem;
}
#donuts h1{letter-spacing: -10px;}
#donuts p {
    margin: 0 0 2% 3%;
}
#donuts p.fourteen-point {
    position: relative;
    z-index: 5;
}
#donuts .two-sixty-six-point {
    margin: 0 -2rem 0 -1rem;
}
#donuts img {
    position:absolute;
    bottom: -10rem;
    right: -10rem;
    align-self: flex-end;
    width: 63vw;
    max-width: 850px;
    height: 63vw;
    max-height: 850px;
    overflow: visible;
    z-index: 4;
}
#awards {
    width: 90%;
    margin: 6vw 0 6vw 10%;
    position: relative;
}

#awards .image-gallery {
    width: 100%;
    max-width: 1100px;
    margin: 0 auto;
    display: flex;
    display: -webkit-flex;
    -webkit-flex-flow: row wrap;
    flex-flow: row wrap;
    -webkit-justify-content: flex-start;
    justify-content: flex-start;
    -webkit-align-items: flex-end;
    align-items: flex-end;
}
#awards .image-gallery .image {
    position: relative;
}
#awards .image-gallery .image img {
    width: 100%;
    height: auto;
}

#awards .image-gallery .image:before {
    content: "";
    display: block;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: none;
    transition: all .3s linear;
    flex-basis: 100%;
    height: auto;
}
#awards .image-gallery .image:hover:before {
    background: rgba(255,30,52, 0.8);
    flex-basis: 100%;
    height: auto;
}
#awards .one-hundred-percent {
    width: 100%;
    display: flex;
    display: -moz-flex;
    display: -ms-flex;
    display: -o-flex;
    display: -webkit-flex;
    flex-direction: column;
}
#awards .seventy-five-percent {
    width: 69%;
    max-height: 265px;
    margin: 0.5vw 3vw 0.5vw 0;
    display: flex;
    display: -webkit-flex;
    flex-direction: column;
    -webkit-flex-direction: column;
    justify-content: flex-start;
    -webkit-justify-content: flex-start;
}
.award-text div {
    width: 60%;
}
#awards .fifty-percent {
    flex-basis: 46%;
    margin: 0.4vw 0.4vw;
    display: flex;
    display: -webkit-flex;
    -webkit-flex-direction: column;
    flex-direction: column;
    -webkit-justify-content: flex-end;
    justify-content: flex-end;
}
#awards .twenty-five-percent {
    flex-basis: 23%;
    margin: 0.5vw 0.5vw;
}
#awards .sixty-point {
    margin: .3em 0;
}
#awards .twenty-four-point {
    font-family: 'Miller Text Italic';
    color: #dc1e35;
    margin: .8em 0 0.1em 0;
}
#awards .fourteen-point {
    margin: 0.3em 0 0.5em 0;
    line-height: 1.2;
}
#awards .blank-image {
    background: #ffffff;
}
.award-logo {
    width: 85%;
    height: 85%;
    padding: 7.5%;
    transition: .2s ease;
    opacity: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    display: flex;
    display: -webkit-flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
}

.award-logo:hover {
    opacity: 1;
}

#inspiration-day {
    position: relative;
    -webkit-background-image: url("assets/InspirationDay/AnnualReport_ImageLinks_InspirationDay_larger.jpg");
    background-repeat: no-repeat;
    background-image: url("assets/InspirationDay/AnnualReport_ImageLinks_InspirationDay_larger.jpg");
    background-size: 100%;
    width: 100%;
    height: 160vw;
    display: flex;
   display: -moz-flex;
   display: -ms-flex;
   display: -o-flex;
   display: -webkit-flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
    display: block;
    top: 15vw;
    z-index: 1;
}
#inspiration-day .text {
    display: flex;
    display: -moz-flex;
    display: -ms-flex;
    display: -o-flex;
    display: -webkit-flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    margin: 0 0 17rem 0
}
#inspiration-day h3 {
    position: absolute;
    right:30%;
    display: block;
    z-index: 2;
    text-align: center;
    overflow: visible;
}
#inspiration-day .text-block {
    position: absolute;
    right: 20%;
    top:0;
    z-index: 1;
    width: 11em;
    min-width: 60px;
    max-width: 235px;
    height: 11em;
    min-height: 60px;
    max-height: 235px;
    align-self: flex-end;
    display: flex;
    display: -moz-flex;
    display: -ms-flex;
    display: -o-flex;
    display: -webkit-flex;
    flex-direction: column;
    justify-content: flex-end;
    background-color: #dc1e35;
    color: #ffffff;
    padding: 1.3em;
    line-height: 1.3;
}

#inspiration-day #pin1 {
    width: 100%;
    display: block;
    text-align: center;
    line-height: 1.6;
    z-index: 5;
    padding: 5em 0 15em 0;
}



#inspiration-day .twenty-four-point {
    font-family: "Miller Text Italic";
    color: #ffffff;
}
#twenty-four-hour-give {
    width: 100%;
    margin: 6vw auto 10vw auto;
    position: relative;
    display: flex;
    display: -moz-flex;
    display: -ms-flex;
    display: -o-flex;
    display: -webkit-flex;
    flex-direction: column;
    justify-content: center;
    z-index: 1;
}
#twenty-four-hour-give .sixty-point {
    position: relative;
    align-self: flex-end;
    width: 70%;
    margin: -.9em -.1em .5em 0;
}
#twenty-four-hour-give .two-sixty-six-point {
    width: 100%;
    margin-left: -4rem;
}
#twenty-four-hour-give img {
    width: 100%;
}
#twenty-four-hour-give img:hover {
    cursor: pointer;
}
#twenty-four-hour-give .text-block {
    position: absolute;
    bottom: -6vw;
    right: 7vw;
    width: 15vw;
    min-width: 140px;
    max-width: 210px;
    height: 15vw;
    min-height: 140px;
    max-height: 210px;
    background-color: #dc1e35;
    z-index: 4;
    padding: 2%;
    line-height: 1.3;
}
/* ... */

